--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Spin Bounce Menu/Socials</title>
   <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
   
   
@@ -15,7 +17,7 @@
 
 <body>
   <div class="nav">
-   <ul>
+   <ul class="animated fadeInDown">
      <li> Home </li>
      <li> About Us </li>
      <li> Services </li>
@@ -23,7 +25,7 @@
   </ul>
   
   
-  <ul>
+  <ul class="animated fadeInUp">
      <li class="social twitter"> <i class="fa fa-twitter" aria-hidden="true"> </i>
  </li>
      <li class="social facebook"> <i class="fa fa-facebook" aria-hidden="true"></i>
